--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,13 @@ find_package(octomap_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_msgs REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(rclcpp_components REQUIRED)
+message("${octomap_msgs_INCLUDE_DIRS}")
 
 link_directories(${PCL_LIBRARY_DIRS})
 include_directories(${PCL_INCLUDE_DIRS})
+include_directories(${octomap_msgs_INCLUDE_DIRS})
 include_directories(include)
 
 add_library(octomap_server2 SHARED
@@ -60,6 +64,8 @@ ament_target_dependencies(octomap_server2
   tf2_ros
   tf2_msgs
   tf2
+  tf2_geometry_msgs
+  rclcpp_components
   )
 
 target_link_libraries(octomap_server2 ${PCL_LIBRARIES} ${OCTOMAP_LIBRARIES})
