--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
   <build_depend>pcl_conversions</build_depend>
   <build_depend>pcl_msgs</build_depend>
   <build_depend>octomap_msgs</build_depend>
+  <build_depend>imgui_debug</build_depend>
 
   <exec_depend>launch_ros</exec_depend>
   <exec_depend>launch_xml</exec_depend>
@@ -37,6 +38,7 @@
   <exec_depend>pcl_conversions</exec_depend>
   <exec_depend>pcl_msgs</exec_depend>
   <exec_depend>octomap_msgs</exec_depend>
+  <build_depend>imgui_debug</build_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
