Use ament to import imgui_debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,9 +43,6 @@ include_directories(${PCL_INCLUDE_DIRS})
 include_directories(${octomap_msgs_INCLUDE_DIRS})
 include_directories(include)
 
-#TODO: Fix this nonsense - the problem is in the imgui_debug CMAKE file 
-include_directories(/root/deepx_ws/install/imgui_debug/include)
-
 add_library(octomap_server2 SHARED
   src/octomap_server.cpp
   src/transforms.cpp
@@ -53,6 +50,7 @@ add_library(octomap_server2 SHARED
   )
 
 ament_target_dependencies(octomap_server2
+  imgui_debug
   rclcpp
   PCL
   pcl_conversions
@@ -75,7 +73,6 @@ ament_target_dependencies(octomap_server2
 target_link_libraries(octomap_server2 
   ${PCL_LIBRARIES} 
   ${OCTOMAP_LIBRARIES} 
-  /root/deepx_ws/install/imgui_debug/lib/libimgui_debug.so
 )
 
 rclcpp_components_register_node(octomap_server2
