Fix imgui_debug dependency declaration

--- a/package.xml
+++ b/package.xml
@@ -38,7 +38,7 @@
   <exec_depend>pcl_conversions</exec_depend>
   <exec_depend>pcl_msgs</exec_depend>
   <exec_depend>octomap_msgs</exec_depend>
-  <build_depend>imgui_debug</build_depend>
+  <exec_depend>imgui_debug</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
